Fixed URL Deprecation & Removed Unused Code